[workspace]

members = [
    "crates/grapevine_cli",
    "crates/grapevine_circuits",
    "crates/grapevine_server",
    "crates/grapevine_common",
]
default-members = ["crates/grapevine_cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"

[workspace.dependencies]
grapevine_circuits = { path = "crates/grapevine_circuits" }
grapevine_common = { path = "crates/grapevine_common" }

babyjubjub-rs = "0.0.10"
ff = { version = "0.13", features = ["derive"] }
ff_ce = { version = "0.11", features = ["derive"] }
hex = "0.4.3"
nova-scotia = { git = "https://github.com/nalinbhardwaj/Nova-Scotia/" }
nova-snark = "0.23.0"
num-bigint = "0.4.4"
poseidon-rs = "0.0.8"
rand = "0.8.5"
serde = "1.0.190"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
jsonwebtoken = "9.2.0"

