[workspace]
members = [
    "crates/grapevine_cli",
    "crates/grapevine_circuits",
    "crates/grapevine_server",
    "crates/grapevine_common",
    "crates/grapevine_wasm",
]
default-members = ["crates/grapevine_cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"

[workspace.dependencies]
grapevine_circuits = { path = "crates/grapevine_circuits" }
grapevine_common = { path = "crates/grapevine_common" }

babyjubjub-rs = { version = "0.0.11", features = ["aarch64"] }
bincode = "1.3.3"
bson = "2.9.0"
dotenv = "0.15.0"
ff = { version = "0.13", features = ["derive"] }
ff_ce = { version = "0.11", features = ["derive"] }
flate2 = "1.0.28"
hex = "0.4.3"
lazy_static = "1.4.0"
mongodb = "2.8.0"
# uses nova-scotia fork with wasm browser support
nova-scotia = { git = "https://github.com/Mach-34/Nova-Scotia" }
nova-snark = "0.23.0"
num-bigint = "0.4.4"
poseidon-rs = "0.0.8"
rand = "0.8.5"
serde = "1.0.190"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
reqwest = { version = "0.11.23", features = ["json"] }
sha3 = "0.10.8"
