cargo-features = ["per-package-target"]

[package]
name = "grapevine_wasm"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
grapevine_common = { path = "../grapevine_native/crates/grapevine_common" }
grapevine_circuits = { path = "../grapevine_native/crates/grapevine_circuits" }

nova-scotia = { git = "https://github.com/Mach-34/Nova-Scotia" }
nova-snark = "0.23.0"
serde = "1.0.190"
serde_json = "1.0.107"
ff = { version = "0.13", features = ["derive"] }
flate2 = "1.0.28"
hex = "0.4.3"
reqwest = { version = "0.11.23", features = ["json"] }

ahash = "0.8.7"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"]}
js-sys = "0.3"
rayon = "1.5"
serde-wasm-bindgen = "0.6.4"
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = { version = "1.0" }
wasm-bindgen-test = "0.3.37"
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
num = "0.4.1"
bincode = "1.3.3"
