[package]
name = "grapevine_circuits"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nova-scotia.workspace = true
nova-snark.workspace = true
serde_json.workspace = true
rand.workspace = true
serde.workspace = true
hex = "0.4.3"
ff = "0.13.0"
flate2 = "1.0.28"
