[package]
name = "grapevine_circuits"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
grapevine_common.workspace = true
nova-scotia.workspace = true
nova-snark.workspace = true
serde_json.workspace = true
rand.workspace = true
serde.workspace = true
ff.workspace = true
hex.workspace = true
flate2 = "1.0.28"
