[package]
name = "grapevine_circuits"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gen_params"
path = "src/params_gen.rs"

[dependencies]
babyjubjub-rs.workspace = true
poseidon-rs.workspace = true
grapevine_common.workspace = true
lazy_static.workspace = true
nova-scotia.workspace = true
nova-snark.workspace = true
num-bigint.workspace = true
serde_json.workspace = true
rand.workspace = true
serde.workspace = true
ff.workspace = true
ff_ce.workspace = true
hex.workspace = true
flate2 = "1.0.28"


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "proof"
path = "benches/proof.rs"
harness = false