[package]
name = "grapevine_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nova-scotia.workspace = true
nova-snark.workspace = true
grapevine_circuits.workspace = true
grapevine_common.workspace = true
# ff.workspace = true
ff.workspace = true
ff_ce.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tokio.workspace = true
num-bigint.workspace = true
babyjubjub-rs.workspace = true
clap = { version = "4.4.7", features = ["derive"] }
reqwest = "0.11.23"
poseidon-rs = "0.0.10"
jsonwebtoken = "9.2.0"

