[package]
name = "grapevine_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
bson.workspace = true
nova-scotia.workspace = true
nova-snark.workspace = true
grapevine_circuits.workspace = true
grapevine_common.workspace = true
ff.workspace = true
ff_ce.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tokio.workspace = true
num-bigint.workspace = true
babyjubjub-rs.workspace = true
reqwest.workspace = true
lazy_static.workspace = true
clap = { version = "4.4.7", features = ["derive", "wrap_help"] }
poseidon-rs = "0.0.10"

[build-dependencies]
dotenv.workspace = true

[[bin]]
name = "grapevine"
path = "src/main.rs"
