[package]
name = "grapevine_common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
babyjubjub-rs.workspace = true
hex.workspace = true
ff.workspace = true
ff_ce.workspace = true
nova-scotia.workspace = true
nova-snark.workspace = true
rand.workspace = true
serde.workspace = true
poseidon-rs.workspace = true
uuid.workspace = true
num-bigint.workspace = true

sha256 = "1.4.0"
aes = "0.8.3"
cbc = "0.1.2"

[dev-dependencies]
serde_json.workspace = true


