[package]
name = "grapevine_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "grapevine-server"
path = "src/main.rs"

[dependencies]
grapevine_common.workspace = true
babyjubjub-rs.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
mongodb.workspace = true
tracing-subscriber = "0.3.17"
tracing = "0.1.40"
rocket = { version = "0.5.0", features = ["json"] }
futures = "0.3.30"

