[package]
name = "grapevine_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "grapevine-server"
path = "src/main.rs"

[dependencies]
bincode.workspace = true
grapevine_common.workspace = true
grapevine_circuits.workspace = true
nova-scotia.workspace = true
babyjubjub-rs.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
uuid.workspace = true
mongodb.workspace = true
hex.workspace = true
sha3.workspace = true
lazy_static.workspace = true
tracing-subscriber = "0.3.17"
tracing = "0.1.40"
rocket = { version = "0.5.0", features = ["json", "tls"] }
futures = "0.3.30"

[build-dependencies]
dotenv.workspace = true

