cargo-features = ["per-package-target"]

[package]
name = "grapevine_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
grapevine_common.workspace = true
nova-scotia.workspace = true
nova-snark.workspace = true
serde.workspace = true
serde_json.workspace = true
ff.workspace = true
flate2.workspace = true
hex.workspace = true
reqwest.workspace = true

ahash = "0.8.7"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"]}
js-sys = "0.3"
rayon = "1.5"
serde-wasm-bindgen = "0.6.4"
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = { version = "1.0" }
wasm-bindgen-test = "0.3.37"
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
num = "0.4.1"
