[package]
name = "phrasedos_params_gen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
nova-scotia.workspace = true
nova-snark.workspace = true
phrasedos_nova.workspace = true
serde = "1.0.190"
serde_json.workspace = true

[[bin]]
name = "phrasedos"
path = "src/main.rs"
