[package]
name = "grapevine_common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json.workspace = true
bson.workspace = true
hex.workspace = true
ff.workspace = true
ff_ce.workspace = true
nova-scotia.workspace = true
nova-snark.workspace = true
rand.workspace = true
serde.workspace = true
poseidon-rs.workspace = true
uuid.workspace = true
num-bigint.workspace = true
reqwest.workspace = true
sha3.workspace = true

serde_bytes = "0.11.14"
sha256 = { version = "1.4.0", default-features = false }
aes = "0.8.3"
cbc = "0.1.2"
ahash = "0.8.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
babyjubjub-rs = "0.0.11"
getrandom = { version = "0.2", features = ["js"]}
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
babyjubjub-rs.workspace = true

[dev-dependencies]
serde_json.workspace = true

